small fixes in css

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 </head>
 
 <body>
-    <div class="wrapper">
+   
         <form class="form">
             <h1 class="form__title">Zarejestruj się!</h1>
             <div class="name form__box">
-                <label for="name">Nazwa użytkownika</label>
+                <label for="name" class="label">Nazwa użytkownika</label>
                 <input type="text" id="name" class="input name__input" placeholder="Podaj nazwę użytkownika">
                 <p class="error name__error">error</p>
             </div>
             <div class="pass form__box">
-                <label for="password">Hasło:</label>
+                <label for="password" class="label">Hasło:</label>
                 <input type="password" id="password" class="input pass__input" placeholder="Podaj hasło">
                 <p class="error pass__error">error</p>
             </div>
             <div class="pass2 form__box">
-                <label for="password2">Powtórz hasło:</label>
+                <label for="password2" class="label">Powtórz hasło:</label>
                 <input type="password" class="input pass2__input" placeholder="Powtórz hasło">
-                <p class="error pass2__error">error</p>
+                <p class="error pass2__error">Podaj</p>
             </div>
             <div class="email form__box">
-                <label for="email">Adres e-mail:</label>
+                <label for="email" class="label">Adres e-mail:</label>
                 <input type="email" class="input email__input" placeholder="email">
                 <p class="error email__error">error</p>
             </div>
@@ -51,7 +51,7 @@
             </div>
 
         </form>
-    </div>
+    
 
 
 
