--- a/index.html
+++ b/index.html
@@ -16,42 +16,41 @@
 </head>
 
 <body>
-   
-        <form class="form">
-            <h1 class="form__title">Zarejestruj się!</h1>
-            <div class="name form__box">
-                <label for="name" class="label">Nazwa użytkownika</label>
-                <input type="text" id="name" class="input name__input" placeholder="Podaj nazwę użytkownika">
-                <p class="error name__error">error</p>
-            </div>
-            <div class="pass form__box">
-                <label for="password" class="label">Hasło:</label>
-                <input type="password" id="password" class="input pass__input" placeholder="Podaj hasło">
-                <p class="error pass__error">error</p>
-            </div>
-            <div class="pass2 form__box">
-                <label for="password2" class="label">Powtórz hasło:</label>
-                <input type="password" class="input pass2__input" placeholder="Powtórz hasło">
-                <p class="error pass2__error">Podaj</p>
-            </div>
-            <div class="email form__box">
-                <label for="email" class="label">Adres e-mail:</label>
-                <input type="email" class="input email__input" placeholder="email">
-                <p class="error email__error">error</p>
-            </div>
+    <form class="form">
+        <h1 class="form__title">Zarejestruj się!</h1>
+        <div class="name form__box">
+            <label for="name" class="name__label">Nazwa użytkownika:</label>
+            <input type="text" id="name" class="input name__input" placeholder="Podaj nazwę użytkownika">
+            <p class="error name__error">error</p>
+        </div>
+        <div class="pass form__box">
+            <label for="password" class="pass__label">Hasło:</label>
+            <input type="password" id="password" class="input pass__input" placeholder="Podaj hasło">
+            <p class="error pass__error">error</p>
+        </div>
+        <div class="pass2 form__box">
+            <label for="password2" class="label">Powtórz hasło:</label>
+            <input type="password" class="input pass2__input" placeholder="Powtórz hasło">
+            <p class="error pass2__error">Podaj</p>
+        </div>
+        <div class="email form__box">
+            <label for="email" class="label">Adres e-mail:</label>
+            <input type="email" class="input email__input" placeholder="email">
+            <p class="error email__error">error</p>
+        </div>
 
-            <div class="form__buttons">
-                <button class="button clear__btn button--highlighted">Wyczyść</button>
-                <button class="button send__btn button--highlighted">Wyślij</button>
-            </div>
-
+        <div class="form__buttons">
+            <button class="button clear__btn button--highlighted">Wyczyść</button>
+            <button class="button send__btn button--highlighted">Wyślij</button>
+        </div>
+        <div class="form__shadow">
             <div class="popup form__popup">
                 <p class="popup__text">Formularz został poprawnie wysłany!</p>
                 <button class="popup__btn button--highlighted">Zamknij</button>
             </div>
+        </div>
+    </form>
 
-        </form>
-    
 
 
 
